	* src/libtracker-db/tracker-db-manager.h
	* tests/libtracker-db/tracker-db-manager-test-attach.c
	* tests/libtracker-db/union-performance.c
	* tests/libtracker-db/tracker-db-manager-test-unattach.c
	* tests/libtracker-db/tracker-db-manager-test-custom.c

	Removing the dir in the temp dir must always happen at startup, never
	at shutdown

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* data/modules/evolution.module: Add local and IMAP storage
	directories.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-module.h: Add tracker_module_init() and
	tracker_module_shutdown() to modules API. This is needed since we now
	don't have an entry point that will be called just once, as happened
	with tracker_module_get_directories().
	* src/tracker-indexer/tracker-indexer-module.[ch]: Updated.
	* src/tracker-indexer/tracker-indexer.c (close_module)
	(tracker_indexer_init): Ensure the initialization/shutdown methods are
	called for the modules.
	* src/tracker-indexer/modules/evolution.c: Use these functions to
	manage persistent data.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-module-config.c
	(module_config_load_file):
	* src/libtracker-common/tracker-ontology.c
	(tracker_ontology_shutdown):
	* src/tracker-indexer/tracker-indexer.c (tracker_indexer_finalize):
	Plug some leaks.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-main.c: Get TrackerModuleConfig to get
	available modules, directories to scan, etc...

2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-dbus.[ch]:
	* src/libtracker-db/tracker-db-dbus.c:
	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.c:
	* tests/libtracker-common/tracker-dbus-test.c: Use a GQueue
	instead of a GAsyncQueue. We don't have any threads so there is no
	need for the extra locking overhead.
